# appium-tizen-driver

./: .eslintrc  .travis.yml  LICENSE  README.md  add_aurum_support.patch  gulpfile.js  index.js  package.json
.github/: dependabot.yml
example/: index.js  org.example.appium-test-application-1.0.0-x86.tpk  package.json
lib/: desired-caps.js  driver.js  logger.js  server.js  tizen-bootstrap.js  tizen-helpers.js
lib/aurum_backend/: aurum_client.js  aurum_grpc_pb.js  element.js  execute.js  find.js  gen.sh  general.js  index.js  touch.js  utils.js
lib/commands/: action.js  aurum.proto  aurum_grpc_pb.js  aurum_pb.js  element.js  execute.js  find.js  general.js  index.js  touch.js  utils.js
rpm/: uiautomator-0.1.1-1.armv7l.rpm  uiautomator-0.1.1-1.i686.rpm
test/: driver-specs.js  elm-demo-tizen-mobile-test.js  org.example.appium-test-application-1.0.0-arm.tpk  org.example.appium-test-application-1.0.0-x86.tpk  org.tizen.elm-demo-tizen-mobile-0.2-1.armv7l.rpm  org.tizen.elm-demo-tizen-mobile-0.2-1.i686.rpm  utils.js
ui-automator/packaging/: uiautomator.spec
ui-automator/src/: CMakeLists.txt  dbus.cpp  dbus.h  hardware_key.cpp  hardware_key.h  input_generator.cpp  input_generator.h  keyboard.cpp  keyboard.h  log.h  main.cpp  server.cpp  server.h  touch.cpp  touch.h  type.h
uiautomator/: org.tizen.uiautomator-1.0.0-arm.tpk  org.tizen.uiautomator-1.0.0-x86.tpk  org.tizen.uiautomator-1.0.1-arm.tpk  org.tizen.uiautomator-1.0.1-x86.tpk
